add comment about links

--- a/mediatags.html
+++ b/mediatags.html
@@ -7,9 +7,9 @@
 </head>
 <body>
     <audio src="https://freesound.org/people/looplicator/sounds/802739/" controls loop muted autoplay></audio>
-    <video src="https://pixabay.com/videos/wildlife-srilanka-endemic-nature-265271/" height="200" width="200" controls loop muted autoplay poster="https://cdn.pixabay.com/photo/2022/05/03/07/45/nature-7171136_1280.jpg"></video>
+    <video src="https://pixabay.com/videos/wildlife-srilanka-endemic-nature-265271/" height="200" width="200" controls loop muted autoplay poster="https://cdn.pixabay.com/photo/2022/05/03/07/45/nature-7171136_1280.jpg"></video><!--can not add absolute link due to copyright issue  -->
     <iframe src="./table3.html" height="300" width="500" frameborder="50"></iframe>
-    <iframe src="https://www.youtube.com/watch?v=UdRVg-mIAcY" frameborder="0"></iframe>
+    <iframe src="https://www.youtube.com/watch?v=UdRVg-mIAcY" frameborder="0"></iframe> <!-- can not add absolute src because of copyright issue  -->
     
 </body>
 </html>
